# E-ink-screen

./: .gitignore  CMakeLists.txt  README.md
components/epd2in13/: CMakeLists.txt  epd2in13.cpp  epd2in13.h  epdif.c  epdif.h  epdpaint.cpp  epdpaint.h
components/file_server/: CMakeLists.txt  file_manage.c  (+2 more)
epaper-pcb/: SW3dPS-TACT Switch - SKHUAME010.STEP  epaper-cache.lib  epaper.emn  epaper.kicad_pcb  epaper.kicad_pcb-bak  epaper.sch-bak  epaper.xml  espressif_logo.kicad_mod  fp-info-cache  fp-lib-table  power.sch  power.sch-bak  speaker.sch
firmware/: CMakeLists.txt  Makefile  partitions.csv  sdkconfig.defaults
firmware/components/webpage_config/: CMakeLists.txt  Kconfig  captive_portal.c
firmware/components/webpage_config/adapt/: esp32_wifi.c
firmware/components/webpage_config/adapt/include/: esp32_httpd.h  esp32_wifi.h
firmware/components/webpage_config/cgi/: cgiwifi.c
firmware/components/webpage_config/cgi/include/: cgiwifi.h
firmware/components/webpage_config/html/: medley.min.js
firmware/components/webpage_config/include/: captive_portal.h
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_image_show.cpp  app_main.c  app_main.cpp  app_show_image.c  app_show_image.cpp  app_show_text.cpp  board.c  board.h  cc936.c  mp3_player.c  mp3_player.h
firmware/main/include/: app_show_image.h  app_show_text.h  cc936.h
hardware/: bugfix.md  epaper-cache.lib  epaper.csv  epaper.emp  epaper.kicad_pcb  epaper.pro  epaper.sch-bak  mylib.lib  sym-lib-table
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  app_main.cpp
tools/: 16x16.DZK  24x24.DZK
(+84 files in other folders)
